# app/Http/Resources/User/UserResource.php
@@ -5,6 +5,7 @@ namespace App\Http\Resources\User;
 use App\Services\JWTService\JWTService;
 use Illuminate\Http\Request;
 use Illuminate\Http\Resources\Json\JsonResource;
+use Illuminate\Support\Carbon;
 
 class UserResource extends JsonResource
 {
@@ -16,6 +17,16 @@ class UserResource extends JsonResource
      */
     public function toArray($request): array
     {
-
+        return [
+            'uuid' => $this->uuid,
+            'first_name' => $this->first_name,
+            'last_name' => $this->last_name,
+            'email' => $this->email,
+            'address' => $this->address,
+            'phone_number' => $this->phone_number,
+            'created_at' => Carbon::make($this->created_at)->format('Y-m-d'),
+            'updated_at' => Carbon::make($this->updated_at)->format('Y-m-d'),
+            'token' => optional($this->hasValidToken())->token,
+        ];
     }
 }
